--- a/index.html
+++ b/index.html
@@ -1,43 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>timeline</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="styles-2.css">
+    <script src="globals.js" defer></script>
+    <script src="mockInputs.js" defer></script>
+    <script src="utils.js" defer></script>
     <script src="script.js" defer></script>
 </head>
+
 <body>
-    <tl-timeline>
-        <tl-month data-month="June" data-year="2021">June</tl-month>
-        <tl-month data-month="July" data-year="2021">July</tl-month>
-        <tl-month data-month="August" data-year="2021">August</tl-month>
-        <tl-month data-month="September" data-year="2021">September</tl-month>
-        <tl-month data-month="October" data-year="2021">October</tl-month>
-        <tl-month data-month="November" data-year="2021">November</tl-month>
-        <tl-month data-month="December" data-year="2021">December</tl-month>
-
-        <tl-month data-month="january" data-year="2022">January</tl-month>
-        <tl-month data-month="February" data-year="2022">February</tl-month>
-        <tl-month data-month="March" data-year="2022">March</tl-month>
-        <tl-month data-month="April" data-year="2022">April</tl-month>
-        <tl-month data-month="May" data-year="2022">May</tl-month>
-        <tl-month data-month="June" data-year="2022">June</tl-month>
-        <tl-month data-month="July" data-year="2022">July</tl-month>
-        <tl-month data-month="August" data-year="2022">August</tl-month>
-        <tl-month data-month="September" data-year="2022">September</tl-month>
-        <tl-month data-month="October" data-year="2022">October</tl-month>
-        <tl-month data-month="November" data-year="2022">November</tl-month>
-        <tl-month data-month="December" data-year="2022">December</tl-month>
-
-        <tl-month data-month="january" data-year="2023">January</tl-month>
-        <tl-month data-month="February" data-year="2023">February</tl-month>
-        <tl-month data-month="March" data-year="2023">March</tl-month>
-        <tl-month data-month="April" data-year="2023">April</tl-month>
-        <tl-month data-month="May" data-year="2023">May</tl-month>
-        <tl-month data-month="June" data-year="2023">June</tl-month>
-    </tl-timeline>
     <t-skeleton></t-skeleton>
 </body>
+
 </html>
