add padding milestones user config, rename file into userConfig.js, create function getOptimalMarkerDateOptions, and other minor fixes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>timeline</title>
     <link rel="stylesheet" href="styles.css">
     <script src="globals.js" defer></script>
-    <script src="mockInputs.js" defer></script>
+    <script src="userConfig.js" defer></script>
     <script src="utils.js" defer></script>
     <script src="script.js" defer></script>
 </head>
